--- a/index.html
+++ b/index.html
@@ -1,17 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chinmayi-portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <nav>
-        <ul>
-            <li>Home</li>
-            <li>Contact Me</li>
-            <li>Contact Me</li>
-        </ul>
-    </nav>   
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="#">My Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto gap-4">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about-me">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-3" href="#">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="my-pic mt-50">
+        <img src="" alt="Chinmayi">
+        <h1 class="name">Chinmayi H M</h1>
+        <p class="brief_intro">Web Developer| Blogger| Tech Enthusiast </p>
+    </div>
+    <section id="about-me">
+        <h2 class="aboutme">About Me</h2>
+        <p class="intro">Hi! I'm <strong>Chinmayi H M</strong> — a passionate web developer and blogger who loves
+            building creative, responsive web applications.
+            I’m currently exploring <strong>backend development</strong> using <strong>FastAPI</strong>, learning about
+            <strong>Generative AI</strong>, and improving my frontend skills with <strong>Bootstrap</strong> and
+            <strong>JavaScript</strong>.
+            I enjoy connecting technology with creativity — from writing blogs on <em>OmniCognito</em> to developing
+            projects that make everyday tasks simpler.</p>
+    </section>
+    <section class="projects">
+        <h2 class="skill-list">Sills</h2>
+        <p class="skill">HTML, CSS, JS FIGMA, Bootstrap
+        <div class="container">
+            <div class="project-description">
+                <h3>EMI Calculator</h3>
+            </div>
+            <div class="project-description">
+                <h3>Simple Ecommerce(only frontend)</h3>
+            </div>
+        </div>
+        </p>
+    </section>
+
+    <section id="certifications">
+        <div class="cert">HackerRank(basic)</div>
+        <div class="cert">Gen-Ai for Begineers</div>
+    </section>
+
+    <section id="contactme">
+        <h2>Contact Me</h2>
+        <p>If you'd like to connect or collaborate, feel free to reach out:</p>
+        <p>Email: <a href="mailto:hmschinmayi06@gmail.com">Email</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/chinmayi-h-m-087545331" target="_blank">Linkedin</a></p>
+        <p>GitHub: <a href="https://github.com/Chinmayi-H-M" target="_blank">Github</a></p>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
