--- a/index.html
+++ b/index.html
@@ -40,39 +40,44 @@
             </div>
         </nav>
     </header>
-    <div class="my-pic mt-50">
-        <img src="" alt="Chinmayi">
-        <h1 class="name">Chinmayi H M</h1>
-        <p class="brief_intro">Web Developer| Blogger| Tech Enthusiast </p>
-    </div>
-    <section id="about-me">
-        <h2 class="aboutme">About Me</h2>
-        <p class="intro">Hi! I'm <strong>Chinmayi H M</strong> — a passionate web developer and blogger who loves
-            building creative, responsive web applications.
-            I’m currently exploring <strong>backend development</strong> using <strong>FastAPI</strong>, learning about
-            <strong>Generative AI</strong>, and improving my frontend skills with <strong>Bootstrap</strong> and
-            <strong>JavaScript</strong>.
-            I enjoy connecting technology with creativity — from writing blogs on <em>OmniCognito</em> to developing
-            projects that make everyday tasks simpler.</p>
-    </section>
-    <section class="projects">
-        <h2 class="skill-list">Sills</h2>
-        <p class="skill">HTML, CSS, JS FIGMA, Bootstrap
-        <div class="container">
-            <div class="project-description">
-                <h3>EMI Calculator</h3>
-            </div>
-            <div class="project-description">
-                <h3>Simple Ecommerce(only frontend)</h3>
-            </div>
+    <main>
+        <div class="my-pic mt-50">
+            <img src="" alt="Chinmayi">
+            <h1 class="name">Chinmayi H M</h1>
+            <p class="brief_intro">Web Developer| Blogger| Tech Enthusiast </p>
         </div>
-        </p>
-    </section>
+        <section id="about-me">
+            <h2 class="aboutme">About Me</h2>
+            <p class="intro">Hi! I'm <strong>Chinmayi H M</strong> — a passionate web developer and blogger who loves
+                building creative, responsive web applications.
+                I’m currently exploring <strong>backend development</strong> using <strong>FastAPI</strong>, learning
+                about
+                <strong>Generative AI</strong>, and improving my frontend skills with <strong>Bootstrap</strong> and
+                <strong>JavaScript</strong>.
+                I enjoy connecting technology with creativity — from writing blogs on <em>OmniCognito</em> to developing
+                projects that make everyday tasks simpler.
+            </p>
+        </section>
+        <section class="projects">
+            <h2 class="skill-list">Sills</h2>
+            <p class="skill">HTML, CSS, JS FIGMA, Bootstrap
+            <div class="container">
+                <div class="project-description">
+                    <h3>EMI Calculator</h3>
+                </div>
+                <div class="project-description">
+                    <h3>Simple Ecommerce(only frontend)</h3>
+                </div>
+            </div>
+            </p>
+        </section>
 
-    <section id="certifications">
-        <div class="cert">HackerRank(basic)</div>
-        <div class="cert">Gen-Ai for Begineers</div>
-    </section>
+        <section id="certifications">
+            <div class="cert">HackerRank(basic)</div>
+            <div class="cert">Gen-Ai for Begineers</div>
+        </section>
+
+    </main>
 
     <section id="contactme">
         <h2>Contact Me</h2>
