--- a/index.html
+++ b/index.html
@@ -28,25 +28,24 @@
                         <a class="nav-link" href="#about-me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
+                        <a class="nav-link" href="#projects">Skills and Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-3" href="#">Contact me</a>
+                        <a class="nav-link me-3" href="#contactme">Contact me</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
-        <div class="my-pic mt-50">
-            <img src="" alt="Chinmayi">
+        <div class="container">
+        <div class="row">
+        <div class="my-pic mt-50 col-lg-6">
+            <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1761395752/my_pic_scs3ij.jpg" alt="Chinmayi" class="image-mine">
             <h1 class="name">Chinmayi H M</h1>
             <p class="brief_intro">Web Developer| Blogger| Tech Enthusiast </p>
         </div>
-        <section id="about-me">
+            <div class="col-lg-6">
             <h2 class="aboutme">About Me</h2>
             <p class="intro">Hi! I'm <strong>Chinmayi H M</strong> — a passionate web developer and blogger who loves
                 building creative, responsive web applications.
@@ -57,8 +56,10 @@
                 I enjoy connecting technology with creativity — from writing blogs on <em>OmniCognito</em> to developing
                 projects that make everyday tasks simpler.
             </p>
-        </section>
-        <section class="projects">
+        </div>
+        </div>
+        </div>
+        <section class="projects" id="projects">
             <h2 class="skill-list">Sills</h2>
             <p class="skill">HTML, CSS, JS FIGMA, Bootstrap
             <div class="container">
