Added some typing animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Chinmayi-portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Jacquard+12&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -39,28 +44,33 @@
     </header>
     <main>
         <div class="container">
-        <div class="row">
-        <div class="my-pic mt-50 col-lg-6">
-            <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1761395752/my_pic_scs3ij.jpg" alt="Chinmayi" class="image-mine">
-            <h1 class="name">Chinmayi H M</h1>
-            <p class="brief_intro">Web Developer| Blogger| Tech Enthusiast </p>
-        </div>
-            <div class="col-lg-6">
-            <h2 class="aboutme">About Me</h2>
-            <p class="intro">Hi! I'm <strong>Chinmayi H M</strong> — a passionate web developer and blogger who loves
-                building creative, responsive web applications.
-                I’m currently exploring <strong>backend development</strong> using <strong>FastAPI</strong>, learning
-                about
-                <strong>Generative AI</strong>, and improving my frontend skills with <strong>Bootstrap</strong> and
-                <strong>JavaScript</strong>.
-                I enjoy connecting technology with creativity — from writing blogs on <em>OmniCognito</em> to developing
-                projects that make everyday tasks simpler.
-            </p>
-        </div>
-        </div>
+            <div class="row">
+                <div class="my-pic mt-50 col-lg-6">
+                    <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1761395752/my_pic_scs3ij.jpg"
+                        alt="Chinmayi" class="image-mine">
+                    <h1 class="name">Chinmayi H M</h1>
+                    <p class="brief_intro typing">Web Developer| Blogger| Tech Enthusiast </p>
+                </div>
+                <div class="col-lg-6">
+                    <h2 class="aboutme">About Me</h2>
+                    <p class="intro">Hi! I'm <strong>Chinmayi H M</strong> — a passionate web developer and blogger who
+                        loves
+                        building creative, responsive web applications.
+                        I’m currently exploring <strong>backend development</strong> using <strong>FastAPI</strong>,
+                        learning
+                        about
+                        <strong>Generative AI</strong>, and improving my frontend skills with <strong>Bootstrap</strong>
+                        and
+                        <strong>JavaScript</strong>.
+                        I enjoy connecting technology with creativity — from writing blogs on <em>OmniCognito</em> to
+                        developing
+                        projects that make everyday tasks simpler.
+                    </p>
+                </div>
+            </div>
         </div>
         <section class="projects" id="projects">
-            <h2 class="skill-list">Sills</h2>
+            <h2 class="skill-list">Skills</h2>
             <p class="skill">HTML, CSS, JS FIGMA, Bootstrap
             <div class="container">
                 <div class="project-description">
