--- a/index.html
+++ b/index.html
@@ -70,8 +70,14 @@
             </div>
         </div>
         <section class="projects" id="projects">
-            <h2 class="skill-list">Skills</h2>
-            <p class="skill">HTML, CSS, JS FIGMA, Bootstrap
+            <h2 class="skill-list">My Skills</h2>
+            <div class="skill-container">
+                <div class="skill-box">HTML</div>
+                <div class="skill-box">CSS</div>
+                <div class="skill-box">JAVASCRIPT</div>
+                <div class="skill-box">REACT(Learning)</div>
+                <div class="skill-box">FIGMA</div>
+            </div>
             <div class="container">
                 <div class="project-description">
                     <h3>EMI Calculator</h3>
