--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
         </div>
         <section class="projects" id="projects">
             <h2 class="skill-list">Skills</h2>
-            <p class="skill">HTML, CSS, JS FIGMA, Bootstrap
+            <div class="skills-container">
+                <div class="skill-box">HTML</div>
+                <div class="skill-box">CSS</div>
+                <div class="skill-box">Javascript</div>
+                <div class="skill-box">React (learning)</div>
+                <div class="skill-box">Figma</div>
+            </div>
             <div class="container">
                 <div class="project-description">
                     <h3>EMI Calculator</h3>
