Projects and background edited

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
             </div>
             <div class="container">
                 <div class="project-description">
+                    <h1>Projects</h1>
                     <h3>EMI Calculator</h3>
+                    <div class="emi">
+                        <img src="" alt="">
+                        <p>Check out it here<a href=""></a></p>
+                    </div>
                 </div>
                 <div class="project-description">
                     <h3>Simple Ecommerce(only frontend)</h3>
