projects-section added

--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@
                 <div class="skill-box">Figma</div>
             </div>
             <div class="container">
-                <div class="project-description">
-                    <h1>Projects</h1>
-                    <h3>EMI Calculator</h3>
-                    <div class="emi">
+                
+                    <h2 class="projects-2">Projects</h2>
+                    <div class="project-description"></div>
+                    <div class="project-card">
                         <img src="" alt="">
-                        <p>Check out it here<a href=""></a></p>
+                        <h3>EMI CALCULATOR</h3>
+                        <p>A simple EMI calculator built using Javascript.</p>
+                        <a href="" target="_blank">View on Github</a>
+                        <a href="">For live</a>
                     </div>
                 </div>
                 <div class="project-description">
