--- a/index.html
+++ b/index.html
@@ -79,22 +79,25 @@
                 <div class="skill-box">Figma</div>
             </div>
             <div class="container">
-                
-                    <h2 class="projects-2">Projects</h2>
-                    <div class="project-description"></div>
-                    <div class="project-card">
-                        <img src="" alt="">
-                        <h3>EMI CALCULATOR</h3>
-                        <p>A simple EMI calculator built using Javascript.</p>
-                        <a href="" target="_blank">View on Github</a>
-                        <a href="">For live</a>
-                    </div>
-                </div>
+                <h2 class="projects-2">Projects</h2>
                 <div class="project-description">
+                <div class="project-card">
+                    <img src="" alt="">
+                    <h3>EMI CALCULATOR</h3>
+                    <p>A simple EMI calculator built using Javascript.</p>
+                    <a href="" target="_blank">View on Github</a>
+                    <a href="https://chinmayi-h-m.github.io/Javascript/">For live</a>
+                </div>
+
+                <div class="project-card">
                     <h3>Simple Ecommerce(only frontend)</h3>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="" target="_blank">View on Github</a>
+                    <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
                 </div>
             </div>
-            </p>
+            </div>
         </section>
 
         <section id="certifications">
