--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <img src="" alt="">
                     <h3>EMI CALCULATOR</h3>
                     <p>A simple EMI calculator built using Javascript.</p>
-                    <a href="" target="_blank">View on Github</a>
+                    <a href="https://github.com/Chinmayi-H-M/Javascript" target="_blank">View on Github</a>
                     <a href="https://chinmayi-h-m.github.io/Javascript/">For live</a>
                 </div>
 
@@ -93,7 +93,7 @@
                     <h3>Simple Ecommerce(only frontend)</h3>
                     <img src="" alt="">
                     <p></p>
-                    <a href="" target="_blank">View on Github</a>
+                    <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
                     <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
                 </div>
             </div>
@@ -101,6 +101,7 @@
         </section>
 
         <section id="certifications">
+            <h1>Certifications</h1>
             <div class="cert">HackerRank(basic)</div>
             <div class="cert">Gen-Ai for Begineers</div>
         </section>
