--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Chinmayi-portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -111,9 +112,9 @@
     <section id="contactme">
         <h2>Contact Me</h2>
         <p>If you'd like to connect or collaborate, feel free to reach out:</p>
-        <p>Email: <a href="mailto:hmschinmayi06@gmail.com">Email</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/chinmayi-h-m-087545331" target="_blank">Linkedin</a></p>
-        <p>GitHub: <a href="https://github.com/Chinmayi-H-M" target="_blank">Github</a></p>
+        <p><a href="mailto:hmschinmayi06@gmail.com">Email</a></p>
+        <p><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/chinmayi-h-m-087545331" target="_blank">Linkedin</a></p>
+        <p><i class="fa-brands fa-github"></i><a href="https://github.com/Chinmayi-H-M" target="_blank">Github</a></p>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
