Contact section designed

--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@
     <section id="contactme">
         <h2>Contact Me</h2>
         <p>If you'd like to connect or collaborate, feel free to reach out:</p>
-        <p><a href="mailto:hmschinmayi06@gmail.com">Email</a></p>
-        <p><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/chinmayi-h-m-087545331" target="_blank">Linkedin</a></p>
-        <p><i class="fa-brands fa-github"></i><a href="https://github.com/Chinmayi-H-M" target="_blank">Github</a></p>
+        <div class="contact-design">
+        <div><a href="mailto:hmschinmayi06@gmail.com">Email</a></div>
+        <div><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/chinmayi-h-m-087545331" target="_blank">Linkedin</a></div>
+        <div><i class="fa-brands fa-github"></i><a href="https://github.com/Chinmayi-H-M" target="_blank">Github</a></div>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
