--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
 
         <section id="certifications">
             <h1>Certifications</h1>
+            <div class="diff-cert">
             <div class="cert">HackerRank(basic)</div>
             <div class="cert">Gen-Ai for Begineers</div>
+            </div>
         </section>
 
     </main>
