Achievements and certifications designing

--- a/index.html
+++ b/index.html
@@ -102,10 +102,23 @@
         </section>
 
         <section id="certifications">
-            <h1>Certifications</h1>
+            <h1>Achievements & Certifications</h1>
             <div class="diff-cert">
-            <div class="cert">HackerRank(basic)</div>
-            <div class="cert">Gen-Ai for Begineers</div>
+            <div class="cert">
+                <h3>Python (Basic) Certificate</h3>
+                <p>HackerRank</p>
+                <a href=""></a>
+            </div>
+            <div class="cert">
+               <h3>Contributor · GSSOC 2025</h3>
+               <p>Worked on open-source projects, collaborated with mentors, and contributed toreal world repositories.</p>
+               <a href="" target="_blank" class="cert-btn">View Program</a>
+            </div>
+
+            <div class="cert">
+                <h3>Participant · Hactoberfest 2025</h3>
+                <p>Participated in the global open-source festival organized by DigitalOcean and Github.</p>
+                <a href="" target="_blank" class="cert-btn">View Event</a>
             </div>
         </section>
 
