--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
             <div class="cert">
                <h3>Contributor · GSSOC 2025</h3>
                <p>Worked on open-source projects, collaborated with mentors, and contributed toreal world repositories.</p>
-               <a href="" target="_blank" class="cert-btn">View Program</a>
+               <a href="https://gssoc.girlscript.tech/" target="_blank" class="cert-btn">View Program</a>
             </div>
 
             <div class="cert">
                 <h3>Participant · Hactoberfest 2025</h3>
                 <p>Participated in the global open-source festival organized by DigitalOcean and Github.</p>
-                <a href="" target="_blank" class="cert-btn">View Event</a>
+                <a href="https://github.com/Chinmayi-H-M" target="_blank" class="cert-btn">View Badge</a>
             </div>
         </section>
 
