--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             <div class="diff-cert">
             <div class="cert">
                 <h3>Python (Basic) Certificate</h3>
-                <p>HackerRank</p>
-                <a href=""></a>
+                <p>Issued by <span>HackerRank</span> · April 2024</p>
+                <a href="https://www.hackerrank.com/certificates/2f5e153e8667?hr_r=1" target="_blank" class="cert-btn">View Certificate</a>
             </div>
             <div class="cert">
                <h3>Contributor · GSSOC 2025</h3>
