--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <div class="project-card">
                     <img src="" alt="">
                     <h3>EMI CALCULATOR</h3>
+                    <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825008/emi_fuhpck.jpg" alt="">
                     <p>A simple EMI calculator built using Javascript.</p>
                     <a href="https://github.com/Chinmayi-H-M/Javascript" target="_blank">View on Github</a>
                     <a href="https://chinmayi-h-m.github.io/Javascript/">For live</a>
@@ -92,8 +93,8 @@
 
                 <div class="project-card">
                     <h3>Simple Ecommerce(only frontend)</h3>
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825035/ecom_f0u0ah.jpg" alt="">
+                    <p>A simple e-commerce website built with HTML, CSS, and JavaScript.</p>
                     <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
                     <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
                 </div>
