--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="my-pic mt-50 col-lg-6">
                     <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1761395752/my_pic_scs3ij.jpg"
                         alt="Chinmayi" class="image-mine">
-                    <h1 class="name p-5">Chinmayi H M</h1>
+                    <h1 class="name">Chinmayi H M</h1>
                     <p class="brief_intro typing">Web Developer| Blogger| Tech Enthusiast </p>
                 </div>
                 <div class="col-lg-6">
