--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
                     <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
                     <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
                 </div>
+                <div class="project-card">
+                    <h3>Simple Ecommerce(only frontend)</h3>
+                    <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825035/ecom_f0u0ah.jpg" alt="">
+                    <p>A simple e-commerce website built with HTML, CSS, and JavaScript.</p>
+                    <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
+                    <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
+                </div>
             </div>
             </div>
         </section>
