added ,ysore heritage explorer

--- a/index.html
+++ b/index.html
@@ -82,52 +82,64 @@
             <div class="container">
                 <h2 class="projects-2">Projects</h2>
                 <div class="project-description">
-                <div class="project-card">
-                    <img src="" alt="">
-                    <h3>EMI CALCULATOR</h3>
-                    <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825008/emi_fuhpck.jpg" alt="">
-                    <p>A simple EMI calculator built using Javascript.</p>
-                    <a href="https://github.com/Chinmayi-H-M/Javascript" target="_blank">View on Github</a>
-                    <a href="https://chinmayi-h-m.github.io/Javascript/">For live</a>
-                </div>
+                    <div class="project-card">
+                        <img src="" alt="">
+                        <h3>EMI CALCULATOR</h3>
+                        <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825008/emi_fuhpck.jpg" alt="">
+                        <p>A simple EMI calculator built using Javascript.</p>
+                        <a href="https://github.com/Chinmayi-H-M/Javascript" target="_blank">View on Github</a>
+                        <a href="https://chinmayi-h-m.github.io/Javascript/">For live</a>
+                    </div>
 
-                <div class="project-card">
-                    <h3>Simple Ecommerce(only frontend)</h3>
-                    <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825035/ecom_f0u0ah.jpg" alt="">
-                    <p>A simple e-commerce website built with HTML, CSS, and JavaScript.</p>
-                    <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
-                    <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
+                    <div class="project-card">
+                        <h3>Simple Ecommerce(only frontend)</h3>
+                        <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825035/ecom_f0u0ah.jpg" alt="">
+                        <p>A simple e-commerce website built with HTML, CSS, and JavaScript.</p>
+                        <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
+                        <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
+                    </div>
+                    <div class="project-card">
+                        <h3>Mysore Heritage Explorer</h3>
+                        <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1765681607/mhe_tpr8nc.jpg"
+                            alt="Mysore Heritage Explorer">
+                        <p>
+                            A web application built using Django that showcases the rich heritage of Mysore.
+                            It includes full CRUD operations, category-wise listing, search functionality,
+                            and dynamic pages powered by Django models and views.
+                        </p>
+                        <a href="https://github.com/Chinmayi-H-M/MysoreHelitageExplorer" target="_blank">
+                            View on GitHub
+                        </a>
+                        <a href="https://mysorehelitageexplorer.onrender.com">
+                            For Live
+                        </a>
+                    </div>
+
                 </div>
-                <div class="project-card">
-                    <h3>Simple Ecommerce(only frontend)</h3>
-                    <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825035/ecom_f0u0ah.jpg" alt="">
-                    <p>A simple e-commerce website built with HTML, CSS, and JavaScript.</p>
-                    <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
-                    <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
-                </div>
-            </div>
             </div>
         </section>
 
         <section id="certifications">
             <h1>Achievements & Certifications</h1>
             <div class="diff-cert">
-            <div class="cert">
-                <h3>Python (Basic) Certificate</h3>
-                <p>Issued by <span>HackerRank</span> · April 2024</p>
-                <a href="https://www.hackerrank.com/certificates/2f5e153e8667?hr_r=1" target="_blank" class="cert-btn">View Certificate</a>
-            </div>
-            <div class="cert">
-               <h3>Contributor · GSSOC 2025</h3>
-               <p>Worked on open-source projects, collaborated with mentors, and contributed toreal world repositories.</p>
-               <a href="https://gssoc.girlscript.tech/" target="_blank" class="cert-btn">View Program</a>
-            </div>
+                <div class="cert">
+                    <h3>Python (Basic) Certificate</h3>
+                    <p>Issued by <span>HackerRank</span> · April 2024</p>
+                    <a href="https://www.hackerrank.com/certificates/2f5e153e8667?hr_r=1" target="_blank"
+                        class="cert-btn">View Certificate</a>
+                </div>
+                <div class="cert">
+                    <h3>Contributor · GSSOC 2025</h3>
+                    <p>Worked on open-source projects, collaborated with mentors, and contributed toreal world
+                        repositories.</p>
+                    <a href="https://gssoc.girlscript.tech/" target="_blank" class="cert-btn">View Program</a>
+                </div>
 
-            <div class="cert">
-                <h3>Participant · Hactoberfest 2025</h3>
-                <p>Participated in the global open-source festival organized by DigitalOcean and Github.</p>
-                <a href="https://github.com/Chinmayi-H-M" target="_blank" class="cert-btn">View Badge</a>
-            </div>
+                <div class="cert">
+                    <h3>Participant · Hactoberfest 2025</h3>
+                    <p>Participated in the global open-source festival organized by DigitalOcean and Github.</p>
+                    <a href="https://github.com/Chinmayi-H-M" target="_blank" class="cert-btn">View Badge</a>
+                </div>
         </section>
 
     </main>
@@ -136,9 +148,11 @@
         <h2>Contact Me</h2>
         <p>If you'd like to connect or collaborate, feel free to reach out:</p>
         <div class="contact-design">
-        <div><i class="fa-solid fa-envelope"></i><a href="mailto:hmschinmayi06@gmail.com">Email</a></div>
-        <div><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/chinmayi-h-m-087545331" target="_blank">Linkedin</a></div>
-        <div><i class="fa-brands fa-github"></i><a href="https://github.com/Chinmayi-H-M" target="_blank">Github</a></div>
+            <div><i class="fa-solid fa-envelope"></i><a href="mailto:hmschinmayi06@gmail.com">Email</a></div>
+            <div><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/chinmayi-h-m-087545331"
+                    target="_blank">Linkedin</a></div>
+            <div><i class="fa-brands fa-github"></i><a href="https://github.com/Chinmayi-H-M" target="_blank">Github</a>
+            </div>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
