Font family change

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </section>
 
         <section id="certifications">
-            <h1>Achievements & Certifications</h1>
+            <h1 class="aandc">Achievements & Certifications</h1>
             <div class="diff-cert">
                 <div class="cert">
                     <h3>Python (Basic) Certificate</h3>
