--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                     </li>
                 </ul>
             </div>
+            <button id="themeToggle" class="theme-toggle">
+    🌙 Dark
+</button>
+
         </nav>
     </header>
     <main>
