--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
     </main>
 
     <section id="contactme">
-        <h2>Contact Me</h2>
-        <p>If you'd like to connect or collaborate, feel free to reach out:</p>
+        <h2 class="contact-me">Contact Me</h2>
+        <p class="contact-mep">If you'd like to connect or collaborate, feel free to reach out:</p>
         <div class="contact-design">
             <div><i class="fa-solid fa-envelope"></i><a href="mailto:hmschinmayi06@gmail.com">Email</a></div>
             <div><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/chinmayi-h-m-087545331"
