--- a/index.html
+++ b/index.html
@@ -87,22 +87,34 @@
                 <h2 class="projects-2">Projects</h2>
                 <div class="project-description">
                     <div class="project-card">
-                        <h3>EMI CALCULATOR</h3>
+                        <h3 class="p-name">EMI CALCULATOR</h3>
                         <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825008/emi_fuhpck.jpg" alt="">
-                        <p>A simple EMI calculator built using Javascript.</p>
+                        <p>
+A web-based EMI Calculator built using <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong>.
+It allows users to calculate their monthly EMI by entering the loan amount, interest rate, and loan tenure.
+The project demonstrates strong fundamentals in JavaScript logic, DOM manipulation, and real-time calculations.
+It focuses on simplicity, accuracy, and a clean user interface for better user experience.
+</p>
+
                         <a href="https://github.com/Chinmayi-H-M/Javascript" target="_blank">View on Github</a>
                         <a href="https://chinmayi-h-m.github.io/Javascript/">For live</a>
                     </div>
 
                     <div class="project-card">
-                        <h3>Simple Ecommerce(only frontend)</h3>
+                        <h3 class="p-name">Simple Ecommerce(only frontend)</h3>
                         <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825035/ecom_f0u0ah.jpg" alt="">
-                        <p>A simple e-commerce website built with HTML, CSS, and JavaScript.</p>
+                        <p>
+A frontend e-commerce website built using <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong>.
+It showcases product listings with a clean layout and interactive UI elements.
+The project focuses on responsive design and basic frontend functionality.
+</p>
+
+
                         <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
                         <a href="https://chinmayi-h-m.github.io/chimasha-ecommerce/">For live</a>
                     </div>
                     <div class="project-card">
-                        <h3>Mysore Heritage Explorer</h3>
+                        <h3 class="p-name">Mysore Heritage Explorer</h3>
                         <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1765681607/mhe_tpr8nc.jpg"
                             alt="Mysore Heritage Explorer">
                         <p>
