Fixing some bugs

--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@ The project focuses on responsive design and basic frontend functionality.
                     <p>Participated in the global open-source festival organized by DigitalOcean and Github.</p>
                     <a href="https://github.com/Chinmayi-H-M" target="_blank" class="cert-btn">View Badge</a>
                 </div>
-        </section>
 
+            </div>
+        </section>
     </main>
 
     <section id="contactme">
