Some needed changes

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </ul>
             </div>
             <button id="themeToggle" class="theme-toggle">
-    🌙 Dark
-</button>
+                🌙 Dark
+            </button>
 
         </nav>
     </header>
@@ -74,15 +74,8 @@
                 </div>
             </div>
         </div>
-        <section class="projects" id="projects">
-            <h2 class="skill-list">Skills</h2>
-            <div class="skills-container">
-                <div class="skill-box">HTML</div>
-                <div class="skill-box">CSS</div>
-                <div class="skill-box">Javascript</div>
-                <div class="skill-box">React (learning)</div>
-                <div class="skill-box">Figma</div>
-            </div>
+
+        <section>
             <div class="container">
                 <h2 class="projects-2">Projects</h2>
                 <div class="project-description">
@@ -90,11 +83,14 @@
                         <h3 class="p-name">EMI CALCULATOR</h3>
                         <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825008/emi_fuhpck.jpg" alt="">
                         <p>
-A web-based EMI Calculator built using <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong>.
-It allows users to calculate their monthly EMI by entering the loan amount, interest rate, and loan tenure.
-The project demonstrates strong fundamentals in JavaScript logic, DOM manipulation, and real-time calculations.
-It focuses on simplicity, accuracy, and a clean user interface for better user experience.
-</p>
+                            A web-based EMI Calculator built using <strong>HTML</strong>, <strong>CSS</strong>, and
+                            <strong>JavaScript</strong>.
+                            It allows users to calculate their monthly EMI by entering the loan amount, interest rate,
+                            and loan tenure.
+                            The project demonstrates strong fundamentals in JavaScript logic, DOM manipulation, and
+                            real-time calculations.
+                            It focuses on simplicity, accuracy, and a clean user interface for better user experience.
+                        </p>
 
                         <a href="https://github.com/Chinmayi-H-M/Javascript" target="_blank">View on Github</a>
                         <a href="https://chinmayi-h-m.github.io/Javascript/">For live</a>
@@ -104,10 +100,11 @@ It focuses on simplicity, accuracy, and a clean user interface for better user e
                         <h3 class="p-name">Simple Ecommerce(only frontend)</h3>
                         <img src="https://res.cloudinary.com/dkguge6rw/image/upload/v1762825035/ecom_f0u0ah.jpg" alt="">
                         <p>
-A frontend e-commerce website built using <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong>.
-It showcases product listings with a clean layout and interactive UI elements.
-The project focuses on responsive design and basic frontend functionality.
-</p>
+                            A frontend e-commerce website built using <strong>HTML</strong>, <strong>CSS</strong>, and
+                            <strong>JavaScript</strong>.
+                            It showcases product listings with a clean layout and interactive UI elements.
+                            The project focuses on responsive design and basic frontend functionality.
+                        </p>
 
 
                         <a href="https://github.com/Chinmayi-H-M/chimasha-ecommerce" target="_blank">View on Github</a>
