Some skills division

--- a/index.html
+++ b/index.html
@@ -74,6 +74,79 @@
                 </div>
             </div>
         </div>
+        <section class="skills" id="skills">
+            <h2 class="skill-list">Skills</h2>
+
+            <!-- Programming Languages -->
+            <div class="skills-group">
+                <h3 class="skills-subtitle">Programming Languages</h3>
+                <div class="skills-container">
+                    <div class="skill-box">
+                        <img src="images/python.png" alt="Python">
+                        <span>Python</span>
+                    </div>
+
+                    <div class="skill-box">
+                        <img src="images/java.png" alt="Java">
+                        <span>Java</span>
+                    </div>
+
+                    <div class="skill-box">
+                        <img src="images/cpp.png" alt="C++">
+                        <span>C++</span>
+                        <span class="level">(basic)</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Web / Development Skills -->
+            <div class="skills-group">
+                <h3 class="skills-subtitle">Web & Development Skills</h3>
+                <div class="skills-container">
+                    <div class="skill-box">
+                        <img src="images/html.png" alt="HTML">
+                        <span>HTML</span>
+                    </div>
+
+                    <div class="skill-box">
+                        <img src="images/css.png" alt="CSS">
+                        <span>CSS</span>
+                    </div>
+
+                    <div class="skill-box">
+                        <img src="images/javascript.png" alt="JavaScript">
+                        <span>JavaScript</span>
+                    </div>
+
+                    <div class="skill-box">
+                        <img src="images/react.png" alt="React">
+                        <span>React</span>
+                        <span class="level">(learning)</span>
+                    </div>
+
+                    <div class="skill-box">
+                        <img src="images/figma.png" alt="Figma">
+                        <span>Figma</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Frameworks & Tools -->
+            <div class="skills-group">
+                <h3 class="skills-subtitle">Frameworks & Tools</h3>
+                <div class="skills-container">
+                    <div class="skill-box">
+                        <img src="images/django.png" alt="Django">
+                        <span>Django</span>
+                    </div>
+
+                    <div class="skill-box">
+                        <img src="images/github.png" alt="Git & GitHub">
+                        <span>Git & GitHub</span>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section>
             <div class="container">
