--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
                 <h3 class="skills-subtitle">Programming Languages</h3>
                 <div class="skills-container">
                     <div class="skill-box">
-                        <img src="images/python.png" alt="Python">
+                        <img src="https://skillicons.dev/icons?i=python" alt="Python">
                         <span>Python</span>
                     </div>
 
                     <div class="skill-box">
-                        <img src="images/java.png" alt="Java">
+                        <img src="https://skillicons.dev/icons?i=java" alt="Java">
                         <span>Java</span>
                     </div>
 
                     <div class="skill-box">
-                        <img src="images/cpp.png" alt="C++">
+                        <img src="https://skillicons.dev/icons?i=cpp" alt="C++">
                         <span>C++</span>
                         <span class="level">(basic)</span>
                     </div>
@@ -104,28 +104,28 @@
                 <h3 class="skills-subtitle">Web & Development Skills</h3>
                 <div class="skills-container">
                     <div class="skill-box">
-                        <img src="images/html.png" alt="HTML">
+                        <img src="https://skillicons.dev/icons?i=html" alt="HTML">
                         <span>HTML</span>
                     </div>
 
                     <div class="skill-box">
-                        <img src="images/css.png" alt="CSS">
+                        <img src="https://skillicons.dev/icons?i=css" alt="CSS">
                         <span>CSS</span>
                     </div>
 
                     <div class="skill-box">
-                        <img src="images/javascript.png" alt="JavaScript">
+                        <img src="https://skillicons.dev/icons?i=javascript" alt="JavaScript">
                         <span>JavaScript</span>
                     </div>
 
                     <div class="skill-box">
-                        <img src="images/react.png" alt="React">
+                        <img src="https://skillicons.dev/icons?i=react" alt="React">
                         <span>React</span>
                         <span class="level">(learning)</span>
                     </div>
 
                     <div class="skill-box">
-                        <img src="images/figma.png" alt="Figma">
+                        <img src="https://skillicons.dev/icons?i=figma" alt="Figma">
                         <span>Figma</span>
                     </div>
                 </div>
@@ -136,12 +136,12 @@
                 <h3 class="skills-subtitle">Frameworks & Tools</h3>
                 <div class="skills-container">
                     <div class="skill-box">
-                        <img src="images/django.png" alt="Django">
+                        <img src="https://skillicons.dev/icons?i=django" alt="Django">
                         <span>Django</span>
                     </div>
 
                     <div class="skill-box">
-                        <img src="images/github.png" alt="Git & GitHub">
+                        <img src="https://skillicons.dev/icons?i=github" alt="Git & GitHub">
                         <span>Git & GitHub</span>
                     </div>
                 </div>
