Adding services section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                         <a class="nav-link" href="#projects">Skills and Projects</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link me-3" href="#contactme">Contact me</a>
                     </li>
                 </ul>
