--- a/index.html
+++ b/index.html
@@ -152,35 +152,39 @@
         </section>
 
         <section class="services" id="services">
-    <h2 class="skill-list">Services</h2>
+            <h2 class="skill-list">Services</h2>
 
-    <div class="services-container">
-        <div class="service-card">
-            <img src="https://skillicons.dev/icons?i=html,css,js" alt="Web Development">
-            <h3>Web Development</h3>
-            <p>
-                Designing and developing responsive, user-friendly websites using modern frontend technologies.
-            </p>
-        </div>
+            <div class="services-container">
+                <div class="service-card">
+                    <img src="https://skillicons.dev/icons?i=html,css,js" alt="Web Development">
+                    <h3>Web Development</h3>
+                    <p>
+                        Designing and developing responsive, user-friendly websites using modern frontend technologies.
+                    </p>
+                </div>
 
-        <div class="service-card">
-            <img src="https://skillicons.dev/icons?i=figma" alt="UI UX Design">
-            <h3>UI / UX Design</h3>
-            <p>
-                Creating clean and intuitive interface designs using Figma with a focus on user experience.
-            </p>
-        </div>
+                <div class="service-card">
+                    <img src="https://skillicons.dev/icons?i=figma" alt="UI UX Design">
+                    <h3>UI / UX Design</h3>
+                    <p>
+                        Creating clean and intuitive interface designs using Figma with a focus on user experience.
+                    </p>
+                </div>
 
-        <div class="service-card">
-            <img src="https://skillicons.dev/icons?i=django,python" alt="Django Development">
-            <h3>Django Web Applications</h3>
-            <p>
-                Building Django-based web applications with dynamic content, CRUD operations, and backend logic.
-            </p>
-        </div>
-    </div>
+                <div class="service-card">
+                    <img src="https://skillicons.dev/icons?i=django,python" alt="Django Development">
+                    <h3>Django Web Applications</h3>
+                    <p>
+                        Building Django-based web applications with dynamic content, CRUD operations, and backend logic.
+                    </p>
+                </div>
+            </div>
+            <!-- Request Service CTA -->
+            <div class="service-cta">
+                <a href="#contactme" class="service-btn">Request Service</a>
+            </div>
+        </section>
 
-    
 
 
         <section>
